# Gimbal

./: README.md
2025_Gimbal/: .cproject  .mxproject  .project  CMakeLists.txt  CMakeLists_template.txt  STM32F407IGHX_FLASH.ld  STM32F407IGHX_RAM.ld  gimbal_test.ioc
2025_Gimbal/Core/Inc/: FreeRTOSConfig.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
2025_Gimbal/Core/Src/: can.c  dma.c  freertos.c  gpio.c  i2c.c  main.c  stm32f4xx_it.c  tim.c  usart.c
2025_Gimbal/User/: main.cpp
2025_Gimbal/User/Framework/: BSP.h  Core.h
2025_Gimbal/User/Framework/DEBUGC/: debugc.cpp  debugc.h  usartio.h
2025_Gimbal/User/Framework/GIMBALC/: gimbalc.cpp  gimbalc.h
2025_Gimbal/User/Framework/IMU/algorithm/: user_lib.h
2025_Gimbal/User/Framework/IMU/controller/: pid.h
2025_Gimbal/User/Framework/IMU/device/: BMI088Middleware.h  BMI088driver.h  ist8310driver.h  ist8310driver_middleware.h
2025_Gimbal/User/Framework/IWDG/: iwdgc.cpp  iwdgc.h
2025_Gimbal/User/Framework/LED/: ledc.cpp  ledc.h
2025_Gimbal/User/Framework/PID/: normal_pid.cpp  normal_pid.h
2025_Gimbal/User/Framework/REMOTEC/: Key_State.cpp  Key_State.h  RC_Ctrl_t.cpp  RC_Ctrl_t.h  remotec.cpp  remotec.h
2025_Gimbal/User/Framework/SHOOTC/: shootc.cpp  shootc.h
2025_Gimbal/User/Framework/SMC/: SMC_readme.md  slidingmodec.cpp  slidingmodec.h
2025_Gimbal/User/Framework/VISION/: crc.cpp  crc.h  packet.hpp
2025_Gimbal/User/Includes/PID_stm32/: PID.bat  PID.mk  PIDC.cpp  PIDC.h  PID_External_Functions.h  STM32_Config.h  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  defines.txt  modelsources.txt  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat
2025_Gimbal/User/Includes/PID_stm32/html/: PID_External_Functions_h.html  PID_c.html  PID_codegen_rpt.html  PID_coderassumptions.html  PID_contents.html  PID_h.html  PID_interface.html  PID_reducedblocks.html  PID_replacements.html  PID_subsystems.html  PID_survey.html  PID_trace.html  STM32_Config_h.html  define.js  main_c.html  rtwtypes_h.html  stm32xxxx_it_c.html
2025_Gimbal/User/Includes/PID_stm32/tmwinternal/: simulink_cache.xml
2025_Gimbal/User/Includes/slprj/sim/varcache/PID/: checksumOfCache.mat  varInfo.mat
2025_Gimbal/User/Includes/slprj/sim/varcache/PID/tmwinternal/: simulink_cache.xml
2025_Gimbal/User/Includes/slprj/stm32/PID/tmwinternal/: CompileInfo.xml  binfo.mat  minfo.mat  scv  tr
2025_Gimbal/User/Includes/slprj/stm32/_sharedutils/: shared_file.dmr
2025_Gimbal/User/MCUDriver/: ITtask.h
2025_Gimbal/User/MCUDriver/CAN/: drv_can.cpp  drv_can.h
2025_Gimbal/User/MCUDriver/DELAY/: bsp_delay.h
2025_Gimbal/User/MCUDriver/IMU/: bsp_dwt.h  bsp_flash.c  bsp_flash.h  bsp_imu_pwm.c  bsp_imu_pwm.h
2025_Gimbal/User/MCUDriver/IT/: stm32_it.cpp  stm32_it.h
2025_Gimbal/User/MCUDriver/LED/: ledio.cpp  ledio.h
2025_Gimbal/User/MCUDriver/REMOTEC/: remoteio.c  remoteio.h
2025_Gimbal/User/MCUDriver/SPI/: bsp_spi.h
2025_Gimbal/User/MCUDriver/TIM5/: TIM5.cpp  TIM5.h
2025_Gimbal/User/Tasks/: StartTask.cpp  StartTask.h
2025_Gimbal/User/Tasks/GIMBAL_Task/: gimbal_task.cpp  gimbal_task.h
2025_Gimbal/User/Tasks/IMU_Task/: INS_task.c  INS_task.h
2025_Gimbal/User/Tasks/VISIONCOM_Task/: visioncom_task.cpp  visioncom_task.h
2025_Gimbal/config/: daplink.cfg  stm32429i_eval_stlink.cfg
